--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </tbody>
     </table>
     <p>
-        Das Ergebnis des Rechner sollten sie als Orientierungswert ansheen ,da es verschiedene Fehlermöglichkeiten gibt wie abweichender Grundumsatz,falsche Zeiteinschätzung etc.
+        Das Ergebnis des Rechner sollten sie als Orientierungswert ansehen ,da es verschiedene Fehlermöglichkeiten gibt wie abweichender Grundumsatz, falsche Zeiteinschätzung etc.
     </p>
     </form>
     <script src="assets/js/main.js"></script>
